--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <string name="title_activity_mountain_details">Assignment4</string>
     <string name="title_activity_mountains_">Assignment4</string>
     <string name="title_activity_mountains_details">Assignment4</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_refresh">Settings</string>
+    <string name="action_refresh">Refresh</string>
 </resources>
 
